# rlvla

./: README.md  pyproject.toml  requirements.txt  view_lerobot_parquet.py
data/: README.md  add_rewards_to_lerobot.py
model/: README.md  __init__.py  requirements.txt
model/config/: __init__.py  config.json  defaults.py
model/data/: __init__.py  dataset.py
model/integration/: __init__.py  pi0.py
model/models/: __init__.py  critic.py  encoders.py  policy.py  value.py
model/scripts/: check_dependencies.py  download_checkpoints.sh  download_from_huggingface.py  download_pi0_checkpoints.py  run_train.sh  train.py
model/training/: __init__.py  losses.py  trainer.py
model/utils/: __init__.py  download_checkpoints.py  helpers.py
pi0_interface/: README.md
pi0_interface/openpi/: pyproject.toml
pi0_interface/openpi/examples/libero/: convert_libero_hdf5_to_lerobot.py
pi0_interface/openpi/src/openpi/training/: config.py
